@@ -7,9 +7,8 @@ import com.regnis.tinyc.linearscanregalloc.*;
 
 import java.io.*;
 import java.nio.file.*;
+import java.nio.file.attribute.*;
 import java.util.*;
-import java.util.concurrent.*;
-import java.util.function.*;
 
 import org.jetbrains.annotations.*;
 
@@ -29,15 +28,38 @@ public class Compiler {
 
 	@NotNull
 	public static Path compile(@NotNull Path inputFile) throws IOException, InterruptedException {
-		final String subdir = "windows/";
-		return compile(inputFile, subdir);
+		final String subdirWin = "windows/";
+		final String subdirLinux = "linux/";
+		final Path asmFileWin = compile(inputFile, subdirWin, TargetArchitecture.WIN_X86_64);
+		final Path asmFileLinux = compile(inputFile, subdirLinux, TargetArchitecture.LINUX_X86_64);
+		final Path asmFile;
+		final Path exeFile;
+		if (Utils.IS_WINDOWS) {
+			asmFile = asmFileWin;
+			exeFile = useExtension(inputFile, subdirWin, ".exe");
+		}
+		else {
+			asmFile = asmFileLinux;
+			exeFile = useExtension(inputFile, subdirLinux, ".bin");
+		}
+		Files.deleteIfExists(exeFile);
+		if (!launchFasm(asmFile, exeFile)) {
+			throw new IOException("Failed to compile");
+		}
+
+		if (!Utils.IS_WINDOWS) {
+			final Set<PosixFilePermission> permissions = Files.getPosixFilePermissions(exeFile);
+			permissions.add(PosixFilePermission.OWNER_EXECUTE);
+			Files.setPosixFilePermissions(exeFile, permissions);
+		}
+		return exeFile;
 	}
 
 	@NotNull
-	private static Path compile(@NotNull Path inputFile, String subdir) throws IOException, InterruptedException {
-		final Program parsedProgram = Parser.parse(inputFile, Set.of("X86_64"));
+	private static Path compile(@NotNull Path inputFile, String subdir, TargetArchitecture architecture) throws IOException, InterruptedException {
+		final Program parsedProgram = Parser.parse(inputFile, architecture.defines);
 
-		final TypeChecker checker = new TypeChecker(Type.I64, message -> {
+		final TypeChecker checker = new TypeChecker(architecture.pointerIntType, message -> {
 			if (message.isError()) {
 				System.err.println(message);
 			}
@@ -57,7 +79,6 @@ public class Compiler {
 		final Path svgFile = useExtension(inputFile, subdir, ".svg");
 		final Path cfgFile = useExtension(inputFile, subdir, ".cfg");
 		final Path asmFile = useExtension(inputFile, subdir, ".asm");
-		final Path exeFile = useExtension(inputFile, subdir, ".exe");
 		Files.deleteIfExists(astFile);
 		Files.deleteIfExists(irFile);
 		Files.deleteIfExists(irRegFile);
@@ -65,7 +86,6 @@ public class Compiler {
 		Files.deleteIfExists(svgFile);
 		Files.deleteIfExists(cfgFile);
 		Files.deleteIfExists(asmFile);
-		Files.deleteIfExists(exeFile);
 
 		write(program, astFile);
 
@@ -73,7 +93,7 @@ public class Compiler {
 
 		write(program, astSimpleFile);
 
-		IRProgram irProgram = IRGenerator.convert(program, Type.I64);
+		IRProgram irProgram = IRGenerator.convert(program, architecture.pointerIntType);
 		irProgram = CleanupGlobalUnusedVariables.process(irProgram);
 		irProgram = IROptimizer.branchAndLabelOptimizations(irProgram);
 		write(irProgram, irFile);
@@ -90,7 +110,7 @@ public class Compiler {
 					final ControlFlowGraph cfg = result.second();
 					irWriter.write(cfg);
 					dotWriter.writeCfg(cfg);
-					function = LSRegAlloc.process(function, LSArchitecture.WIN_X86_64, Type.I64);
+					function = LSRegAlloc.process(function, architecture.architecture, Type.I64);
 					final List<IRInstruction> optimizedInstructions = IROptimizer.optimize(function.instructions());
 					final IRFunction optimizedFunction = CleanupLocalUnusedVariables.optimize(function.derive(optimizedInstructions));
 					functions.add(optimizedFunction);
@@ -104,14 +124,11 @@ public class Compiler {
 		write(irProgram, irRegFile);
 
 		try (final BufferedWriter writer = Files.newBufferedWriter(asmFile)) {
-			final AsmWriter output = new X86_64_WindowsAsmWriter(writer, 4, X86Registers.WINDOWS);
+			final AsmWriter output = architecture.createAsmWriter(writer);
 			output.write(irProgram);
 		}
 
-		if (!launchFasm(asmFile)) {
-			throw new IOException("Failed to compile");
-		}
-		return exeFile;
+		return asmFile;
 	}
 
 	private static Path useExtension(Path path, String subdir, String extension) throws IOException {
@@ -148,54 +165,37 @@ public class Compiler {
 		));
 		processBuilder.redirectOutput(ProcessBuilder.Redirect.INHERIT);
 		processBuilder.redirectError(ProcessBuilder.Redirect.INHERIT);
-		execute(processBuilder);
+		Utils.execute(processBuilder);
 	}
 
-	private static boolean launchFasm(Path asmFile) throws IOException, InterruptedException {
-		final Path fasmDir = Path.of(System.getProperty("user.home"), "Apps/fasm");
+	private static boolean launchFasm(Path asmFile, Path exeFile) throws IOException, InterruptedException {
+		String fasmName = "fasm";
+		if (Utils.IS_WINDOWS) {
+			fasmName += ".exe";
+		}
+		final String fasmHomeString = System.getenv("FASM_HOME");
+		Path fasmHome = null;
+		if (fasmHomeString != null) {
+			fasmHome = Paths.get(fasmHomeString);
+			fasmName = fasmHome.resolve(fasmName).toString();
+		}
 		final ProcessBuilder processBuilder = new ProcessBuilder(List.of(
-				fasmDir.resolve("FASM.EXE").toString(),
-				asmFile.toString()
+				fasmName,
+				asmFile.toString(),
+				exeFile.toString()
 		));
 		processBuilder.redirectOutput(ProcessBuilder.Redirect.INHERIT);
 		processBuilder.redirectError(ProcessBuilder.Redirect.INHERIT);
-		processBuilder.environment().put("INCLUDE",
-		                                 fasmDir.resolve("INCLUDE").toString());
-		final int result = execute(processBuilder);
+		if (fasmHome != null) {
+			processBuilder.environment().put("INCLUDE",
+			                                 fasmHome.resolve("INCLUDE").toString());
+		}
+		final int result = Utils.execute(processBuilder);
 		if (result == 0) {
 			return true;
 		}
 
 		System.err.println("Fasm failed " + result);
 		return false;
-	}
-
-	private static void launchExe(Path exeFile, @Nullable Path outputFile) throws IOException, InterruptedException {
-		final ProcessBuilder processBuilder = new ProcessBuilder(exeFile.toString());
-		if (outputFile != null) {
-			processBuilder.redirectOutput(outputFile.toFile());
-		}
-		else {
-			processBuilder.redirectOutput(ProcessBuilder.Redirect.INHERIT);
-		}
-		processBuilder.redirectError(ProcessBuilder.Redirect.INHERIT);
-		final int result = execute(processBuilder);
-		if (result == 0) {
-			System.out.println("OK");
-			return;
-		}
-
-		System.err.println("Error " + result);
-	}
-
-	private static int execute(ProcessBuilder processBuilder) throws IOException, InterruptedException {
-		final long start = System.currentTimeMillis();
-		final Process process = processBuilder.start();
-		final long stop = System.currentTimeMillis();
-		System.out.println(processBuilder.command().getFirst() + ": " + (stop - start) + "ms");
-		if (!process.waitFor(5, TimeUnit.SECONDS)) {
-			process.destroy();
-		}
-		return process.exitValue();
 	}
 }
